é so baixar o site já pronto

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "~bootstrap/scss/bootstrap";
+//@import "variables";
+//@import "~bootstrap/scss/bootstrap";
 
 * {
     box-sizing: border-box !important;
