--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -25,36 +25,13 @@
     padding: 20px 20px !important;
 }
 .img-banner {
-    display: grid !important;
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: repeat(24, 1fr);
-    max-height: 400px;
-
-    picture {
-        grid-column: 1/25;
-        grid-row: 1/13;
+    max-height: 500px;
 
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: center;
+            object-position: top;
         }
-    }
 
-    .banner-text {
-        font-size: 0.9rem;
-        grid-column: 2/24;
-        grid-row: 10;
-        background: rgba(#1e3f6f, .9);
-        color: white;
-        max-width: 800px !important;
-    }
-}
-
-
-@include media-breakpoint-up(xl) {
-    .banner-text {
-        grid-column: 2/24 !important;
-    }
 }
