--- a/resources/sass/navbar.scss
+++ b/resources/sass/navbar.scss
@@ -10,15 +10,18 @@
 .mobileMenu {
     padding: 10px !important;
 }
-.navTitle{
+
+.navTitle {
     font-size: 28.8px;
 }
-.headerContent{
+
+.headerContent {
     padding-inline: 50px;
     margin-inline: auto;
 }
+
 .header {
-    height: 9vh;
+    height: 8.68vh;
     //max-height: 90px;
     border-bottom: 1px solid #e9e9e9;
     padding: 10px !important;
@@ -59,8 +62,9 @@
         }
     }
 }
-.beforeSpan{
-    &:before{
+
+.beforeSpan {
+    &:before {
         content: "";
         display: block;
         position: absolute;
@@ -73,15 +77,22 @@
         transform: scaleX(0) translateZ(1px);
         -webkit-backface-visibility: hidden;
         -webkit-transform-style: preserve-3d;
-        transition: transform .26s cubic-bezier(.25,.8,.25,1);
+        transition: transform .26s cubic-bezier(.25, .8, .25, 1);
         will-change: scale;
         background: #00d084;
     }
-    &:hover{
-        &:before{
+
+    &:hover {
+        //revert
+        &:before {
             transform: scaleX(1) translateZ(1px);
         }
     }
+}
+
+.li-nav-link {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .dropdown-nav-link {
@@ -89,13 +100,20 @@
     display: flex;
     align-items: center;
     color: #000;
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 0.4rem 2rem !important;
+    font-weight: 400;
+
+    padding: 0.571em 1.785em;
     text-decoration: none;
 
     &:hover {
-        color: #fff;
-        background-color: #25528c;
+        background-color: #f2f2f2;
+        color: #000;
     }
+}
+.dropdown-menu {
+    top: 10px;
+    border-top: 2px solid #00d084;
+}
+.dropdown-toggle::after {
+    display: none;
 }
