edição, inserção e remoção de documentos

--- a/public/sass/app.css
+++ b/public/sass/app.css
@@ -7208,7 +7208,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #f8f9fa;
 }
 
-.btn-dark {
+.btn-primary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #212529;
   --bs-btn-border-color: #212529;
