--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,7 +24,7 @@ body {
 
 .footer {
     min-height: 50px;
-    background: #202024 !important;
+    background: #fff !important;
 }
 
 .main-container {
@@ -40,7 +40,7 @@ a {
 }
 
 .navbar {
-    background-color: #202024 !important;
+    background-color: #007e7a !important;
     min-height: 90px;
 }
 
@@ -241,7 +241,7 @@ article {
 }
 
 .footerSiteTitle {
-    background-color: #34383d;
+    background-color: #005b5a;
 }
 
 .footerAnotherSites > div {
