--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -63,3 +63,10 @@ $accordion-button-focus-box-shadow: 0 0 0 0.2rem rgba(0, 94, 92, 0.25);
 $accordion-icon-active-color: #fff;
 $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color}'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>");
 $modal-content-border-radius: $border-radius;
+$pagination-color:  #007e7a;
+$pagination-focus-color: #fff;
+$pagination-focus-bg: #007e7a;
+$pagination-focus-box-shadow: 0 0 0 0.2rem rgba(0, 94, 92, 0.25);
+$pagination-active-bg:  #007e7a;
+$pagination-active-border-color:  #007e7a;
+$pagination-hover-color:  #005b5a;
