--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -74,3 +74,4 @@ $pagination-hover-color: #005b5a;
 $dropdown-link-hover-bg: #007e7a;
 $dropdown-link-hover-color: #fff;
 $dropdown-item-padding-y: $spacer * .27;
+$dropdown-link-active-bg: #005b5a;
