cadastro de livro em relatos de viajantes

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -275,3 +275,11 @@ article {
     white-space: nowrap;
     max-width: 220px;
 }
+
+.texto-com-quebra-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Define o máximo de linhas */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Adiciona reticências (...) se o texto for cortado */
+}
