--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -75,3 +75,12 @@ $dropdown-link-hover-bg: #007e7a;
 $dropdown-link-hover-color: #fff;
 $dropdown-item-padding-y: $spacer * .27;
 $dropdown-link-active-bg: #005b5a;
+
+$primary:       #005b5a;
+$secondary:     $gray-600;
+$success:       #0abb98;
+$info:          #17a2b8;
+$warning:       $yellow;
+$danger:        $red;
+$light:         $gray-100;
+$dark:          $gray-900;
