excluir relato e bibliografia

--- a/resources/sass/variables.scss
+++ b/resources/sass/variables.scss
@@ -58,6 +58,7 @@ $tooltip-padding-x: $spacer * 0.5;
 $tooltip-opacity: 1;
 $mark-bg: #c5c5c5;
 $mark-padding: $spacer * 0.0625;
+$accordion-bg: #fff;
 $accordion-button-active-bg: #007e7a;
 $accordion-button-active-color: #fff;
 $accordion-button-focus-box-shadow: 0 0 0 0.2rem rgba(0, 94, 92, 0.25);
